log
Tue 09 May 2023 11:02:15 PM UTC: 
 heap.c | 7 +++++--
 1 file changed, 5 insertions(+), 2 deletions(-)
In file included from test.c:4:
heap.c: In function ‘createHeap’:
heap.c:39:13: error: unused variable ‘heapArray’ [-Werror=unused-variable]
   39 |   heapElem* heapArray = (heapElem*) malloc(sizeof(heapElem));
      |             ^~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
97fbe4a
Tue 09 May 2023 11:02:44 PM UTC: 
 heap.c | 1 +
 1 file changed, 1 insertion(+)
In file included from test.c:4:
heap.c: In function ‘createHeap’:
heap.c:40:13: error: expected expression before ‘]’ token
   40 |   heapArray[] = {0};
      |             ^
heap.c:39:13: error: variable ‘heapArray’ set but not used [-Werror=unused-but-set-variable]
   39 |   heapElem* heapArray = (heapElem*) malloc(sizeof(heapElem));
      |             ^~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
3f6632d
Tue 09 May 2023 11:02:53 PM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
heap.c: In function ‘createHeap’:
heap.c:40:18: error: expected expression before ‘{’ token
   40 |   heapArray[0] = {0};
      |                  ^
Compilation failed
01c794c
Tue 09 May 2023 11:03:00 PM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
heap.c: In function ‘createHeap’:
heap.c:40:12: error: statement with no effect [-Werror=unused-value]
   40 |   heapArray[0];
      |   ~~~~~~~~~^~~
cc1: all warnings being treated as errors
Compilation failed
04003ee
Tue 09 May 2023 11:03:40 PM UTC: 
 heap.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  0|4
total_score: 0/70
606c3ae
Tue 09 May 2023 11:03:50 PM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
89897b2
Tue 09 May 2023 11:04:22 PM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|4
total_score: 0/70
e0c0ea9
Tue 09 May 2023 11:05:45 PM UTC: 
 heap.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
In file included from test.c:4:
heap.c: In function ‘createHeap’:
heap.c:40:12: error: ‘heapArray’ is a pointer; did you mean to use ‘->’?
   40 |   heapArray.priority = 0;
      |            ^
      |            ->
heap.c:41:12: error: ‘heapArray’ is a pointer; did you mean to use ‘->’?
   41 |   heapArray.data = 0;
      |            ^
      |            ->
heap.c:39:13: error: variable ‘heapArray’ set but not used [-Werror=unused-but-set-variable]
   39 |   heapElem* heapArray = (heapElem*) malloc(sizeof(heapElem));
      |             ^~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
e892efa
Tue 09 May 2023 11:05:56 PM UTC: 
 heap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|0
4811382
Tue 09 May 2023 11:06:10 PM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
0dff89b
Tue 09 May 2023 11:07:29 PM UTC: 
 heap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
In file included from test.c:4:
heap.c: In function ‘createHeap’:
heap.c:40:19: error: ‘i’ undeclared (first use in this function)
   40 |   mont->heapArray[i].priority = 3;
      |                   ^
heap.c:40:19: note: each undeclared identifier is reported only once for each function it appears in
heap.c:39:13: error: unused variable ‘heapArray’ [-Werror=unused-variable]
   39 |   heapElem* heapArray = (heapElem*) malloc(sizeof(heapElem));
      |             ^~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
59c758b
Tue 09 May 2023 11:07:40 PM UTC: 
 heap.c | 1 +
 1 file changed, 1 insertion(+)
In file included from test.c:4:
heap.c: In function ‘createHeap’:
heap.c:39:13: error: unused variable ‘heapArray’ [-Werror=unused-variable]
   39 |   heapElem* heapArray = (heapElem*) malloc(sizeof(heapElem));
      |             ^~~~~~~~~
heap.c:41:18: error: ‘i’ is used uninitialized in this function [-Werror=uninitialized]
   41 |   mont->heapArray[i].priority = 3;
      |                  ^
cc1: all warnings being treated as errors
Compilation failed
248664a
Tue 09 May 2023 11:09:15 PM UTC: 
 heap.c | 4 +---
 1 file changed, 1 insertion(+), 3 deletions(-)
In file included from test.c:4:
heap.c: In function ‘createHeap’:
heap.c:39:13: error: unused variable ‘heapArray’ [-Werror=unused-variable]
   39 |   heapElem* heapArray = (heapElem*) malloc(sizeof(heapElem));
      |             ^~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
eb16736
Tue 09 May 2023 11:10:51 PM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
heap.c: In function ‘createHeap’:
heap.c:39:32: error: ‘map’ undeclared (first use in this function)
   39 |   heapElem* heapArray = malloc(map->capacity * sizeof(int));
      |                                ^~~
heap.c:39:32: note: each undeclared identifier is reported only once for each function it appears in
heap.c:39:13: error: unused variable ‘heapArray’ [-Werror=unused-variable]
   39 |   heapElem* heapArray = malloc(map->capacity * sizeof(int));
      |             ^~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
6c672cd
Tue 09 May 2023 11:10:58 PM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
heap.c: In function ‘createHeap’:
heap.c:39:38: error: ‘Heap’ {aka ‘struct Heap’} has no member named ‘capacity’; did you mean ‘capac’?
   39 |   heapElem* heapArray = malloc(mont->capacity * sizeof(int));
      |                                      ^~~~~~~~
      |                                      capac
heap.c:39:13: error: unused variable ‘heapArray’ [-Werror=unused-variable]
   39 |   heapElem* heapArray = malloc(mont->capacity * sizeof(int));
      |             ^~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
095fe31
Tue 09 May 2023 11:11:03 PM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
heap.c: In function ‘createHeap’:
heap.c:39:13: error: unused variable ‘heapArray’ [-Werror=unused-variable]
   39 |   heapElem* heapArray = malloc(mont->capac * sizeof(int));
      |             ^~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
de73f2e
Tue 09 May 2023 11:12:56 PM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
heap.c: In function ‘createHeap’:
heap.c:39:3: error: unknown type name ‘heap’; did you mean ‘Heap’?
   39 |   heap heapArray = malloc(mont->capac * sizeof(heapElem));
      |   ^~~~
      |   Heap
heap.c:39:20: error: initialization of ‘int’ from ‘void *’ makes integer from pointer without a cast [-Werror=int-conversion]
   39 |   heap heapArray = malloc(mont->capac * sizeof(heapElem));
      |                    ^~~~~~
heap.c:39:8: error: unused variable ‘heapArray’ [-Werror=unused-variable]
   39 |   heap heapArray = malloc(mont->capac * sizeof(heapElem));
      |        ^~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
3fadd62
Tue 09 May 2023 11:13:05 PM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
heap.c: In function ‘createHeap’:
heap.c:39:20: error: invalid initializer
   39 |   Heap heapArray = malloc(mont->capac * sizeof(heapElem));
      |                    ^~~~~~
heap.c:39:8: error: unused variable ‘heapArray’ [-Werror=unused-variable]
   39 |   Heap heapArray = malloc(mont->capac * sizeof(heapElem));
      |        ^~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
0c8eb2c
Tue 09 May 2023 11:13:41 PM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
heap.c: In function ‘createHeap’:
heap.c:39:20: error: invalid initializer
   39 |   Heap heapArray = (heapElem*) malloc(sizeof(heapElem));
      |                    ^
heap.c:39:8: error: unused variable ‘heapArray’ [-Werror=unused-variable]
   39 |   Heap heapArray = (heapElem*) malloc(sizeof(heapElem));
      |        ^~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
dc415ff
